# python-project-lvl1

./: Makefile  README.md  pyproject.toml
brain_games/games/: calc_logic.py  even_logic.py  gcd_logic.py  prime_logic.py  progression_logic.py
brain_games/logic/: calc_logic.py  engine.py  even_logic.py  gcd_logic.py  prime_logic.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
