[tool.poetry]
name = "hexlet-code"
version = "0.1.3"
description = "Brain-Games is a funny game to cut your time and modefy your knowledge in math"
packages = [{ include = "brain_games" }, ]
authors = [" Чебупеля <ilsonkin@yandex.ru>"]
repository = "https://github.com/TabulaSmaragudina/python-project-lvl1"
classifiers = [
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"